# darktable-docs

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: segnalazione-modifica.yml
.github/workflows/: publish.yml
appendix/faq/: index.html
appendix/glossary/: index.html
appendix/resources/: index.html
appendix/shortcuts/: index.html
assets/stylesheets/: extra.css
color/: index.html
color/gamut/: index.html
color/icc-profiles/: index.html
color/scene-referred/: index.html
color/white-balance/: index.html
docs/: index.md
docs/appendix/: faq.md  glossary.md  resources.md  shortcuts.md
docs/color/: gamut.md  icc-profiles.md  index.md  scene-referred.md  white-balance.md
docs/export/: formats.md  index.md  styles.md
docs/lighttable/: index.md  metadati-tag.md  modalita.md  organizzazione.md  styles-cronologia.md
docs/masking/: ai-masks.md  combining.md  drawn.md  index.md  parametric.md  raster.md
docs/modules/: agx.md  base-curve.md  blurs.md  censorize.md  channel-mixer.md  chromatic-aberrations.md  color-balance-rgb.md  color-calibration.md  color-equalizer.md  color-harmonizer.md  color-mapping.md  color-profiles.md  composite.md  contrast-equalizer.md  (+30 more)
export/: index.html
hooks/: content_date.py
images/: MISSING_IMAGES.txt
lighttable/: index.html
masking/: index.html
modules/: index.html
pipeline/: index.html
preferences/: index.html
search/: search_index.json
video-tutorials/: index.html
workflow/: index.html
workshop/: index.html
(+180 files in other folders)
