[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "darktable-docs-scraper"
version = "0.1.0"
description = "Scraper incrementale per banca dati documentazione darktable"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "html2text>=2024.2",
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
dt-scrape = "scraper.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["scraper*"]
